bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if(vacation==true){
  ^